Fix more bugs with memo isplay
