# lib/handlers/getTransactions.js
@@ -21,9 +21,8 @@ exports.handler = function getTransactions(req, res, next) {
         const account = req.query.accounts.split(',');
         const { perPage, page } = req.query;
         const newestFirst = req.query.newestFirst || false;
-        const includeJournal = req.query.includeJournal || null;
-      
-        return book.getTransactions({ account, perPage, page, newestFirst, includeJournal });
+        const includeMemo = req.query.includeMemo || false;
+        return book.getTransactions({ account, perPage, page, newestFirst, includeMemo });
     }).then(txs => {
         const result = txs.map(t => t.values());
         res.json(result);
